After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729170 - vp8dec: Fix conditional compilation
vp8dec: Fix conditional compilation
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 720305
 
 
Reported: 2014-04-29 10:26 UTC by sreerenj
Modified: 2014-05-09 12:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vp8: Fix conditional compilation (4.25 KB, patch)
2014-04-29 10:26 UTC, sreerenj
none Details | Review

Description sreerenj 2014-04-29 10:26:36 UTC
Created attachment 275406 [details] [review]
vp8: Fix conditional compilation

Enable proper conditional compilation fro vp8decoder.
Comment 1 Gwenole Beauchesne 2014-05-09 12:43:14 UTC
commit ee6d1b7bd19c2f4dc3793acf0407b554750a4c0f
Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com>
Date:   Tue Apr 29 13:22:47 2014 +0300

    build: fix conditional compilation of VP8 decoder.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729170
    
    [added check for VASliceParameterBufferBase fields]
    Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Comment 2 sreerenj 2014-05-09 12:58:44 UTC
Similar stuffs needed for va_wayland also which I have sent to you together with MVC patches. If needed i can create a new bug for that or you can just integrate the patch i sent.